[SRE-30501] Remove logResponse String builder during all http requests (#312)
* Remove logResponse String builder during all http requests

* Check logging level before string builder

* log exception message in testplanstarter and add OOM exception log

---------

Co-authored-by: zkofiro <zakaria_kofiro@intuit.com>